<resources>
    <string name="app_name">MatchItMania</string>
    <string name="play_button">Play</string>
    <string name="profile_button">Profile</string>
    <string name="settings_button">Settings</string>
    <string name="home_button">Home</string>
    <string name="settings">SETTINGS</string>
    <string name="music">Music</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="log_in">Log In</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="lvl">lvl</string>
    <string name="achievements">Achievements</string>
</resources>